Model changes to reflect new primary keys assignments; tiebreak types service
