# api/routes/openapi/openapi.json
@@ -1548,6 +1548,62 @@
         }
       }
     },
+    "/pages/tiebreaks/{roundId}": {
+      "get": {
+        "summary": "Get tiebreaks needed for a protocol id.  This is just for Palmer testing and will go poof.",
+        "description": "for testing and dev",
+        "tags": [
+          "Invite",
+          "Public",
+          "Schematic",
+          "Round"
+        ],
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/roundId"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Round Information"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "500": {
+            "$ref": "#/components/responses/ErrorResponse"
+          }
+        }
+      }
+    },
+    "/pages/protocol/round/{roundId}": {
+      "get": {
+        "summary": "Get tiebreaks needed for a protocol id",
+        "description": "for testing and dev",
+        "tags": [
+          "Invite",
+          "Public",
+          "Schematic",
+          "Round"
+        ],
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/roundId"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Round Information"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "500": {
+            "$ref": "#/components/responses/ErrorResponse"
+          }
+        }
+      }
+    },
     "/tab/tourns": {
       "post": {
         "summary": "Create tournament",
@@ -3252,6 +3308,45 @@
         }
       }
     },
+    "/rest/tourns/{tournId}/results": {
+      "get": {
+        "summary": "Returns public result sets for a given tournament",
+        "operationId": "getTournResultSets",
+        "tags": [
+          "invite",
+          "public",
+          "results",
+          "pairings"
+        ],
+        "description": "GET /rest/tourns/{tournId}/results is undocumented. Need to add .openapi to handler",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/tournId"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Result Sets connected to a given event, with published aggregated result data attached",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "500": {
+            "$ref": "#/components/responses/ErrorResponse"
+          },
+          "default": {
+            "$ref": "#/components/responses/ErrorResponse"
+          }
+        }
+      }
+    },
     "/rest/tourns/{tournId}/results/{resultSetId}": {
       "get": {
         "summary": "Returns result information given a result set ID if it is public",
@@ -3302,7 +3397,7 @@
     "/rest/tourns/{tournId}/results/event/{eventId}": {
       "get": {
         "summary": "Returns public result information for a given event",
-        "operationId": "getSchematic",
+        "operationId": "getEventResultSets",
         "tags": [
           "invite",
           "public",
@@ -3718,55 +3813,6 @@
               "application/json": {
                 "schema": {
                   "type": "object"
-                }
-              }
-            }
-          },
-          "401": {
-            "$ref": "#/components/responses/Unauthorized"
-          },
-          "500": {
-            "$ref": "#/components/responses/ErrorResponse"
-          },
-          "default": {
-            "$ref": "#/components/responses/ErrorResponse"
-          }
-        }
-      }
-    },
-    "/rest/tourns/{tournId}/results": {
-      "get": {
-        "summary": "Returns an array of result_sets that are published in a tournament",
-        "operationId": "getTournPublishedResults",
-        "tags": [
-          "invite",
-          "public",
-          "results"
-        ],
-        "description": "GET /rest/tourns/{tournId}/results is undocumented. Need to add .openapi to handler",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "tournId",
-            "required": true,
-            "schema": {
-              "type": "integer"
-            }
-          },
-          {
-            "$ref": "#/components/parameters/tournId"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Array of events",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object"
-                  }
                 }
               }
             }
